Fix - Change images div to figure

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
               rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="assets/css/style.css" rel="stylesheet"/>
-        <link href="assets/css/media.css" media="screen and (max-width : 1024px)" rel="stylesheet"/>
+        <link href="assets/css/media.css" rel="stylesheet"/>
 
         <!--    Meta Tags-->
         <title>Bienvenue chez Ohmyfood</title>
@@ -88,11 +88,11 @@
                 <div class="cards bg-grey fade-4">
                     <h1 class="restaurants">Restaurants</h1>
                     <article class="card card-img fade-5">
-                        <div class="card-img-header">
+                        <figure class="card-img-header">
                             <img alt="La palette du goût" class="card-img-top"
                                  src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
-                            <label class="img-btn-left">Nouveau</label>
-                        </div>
+                            <figcaption class="img-btn-left">Nouveau</figcaption>
+                        </figure>
                         <header class="card-content">
                             <hgroup>
                                 <h2><a href="la_palette_du_gout.html" class="strong">La palette du goût</a></h2>
@@ -106,11 +106,11 @@
                     </article>
 
                     <article class="card card-img fade-6">
-                        <div class="card-img-header">
+                        <figure class="card-img-header">
                             <img alt="La note enchantée" class="card-img-top"
                                  src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg">
-                            <label class="img-btn-left">Nouveau</label>
-                        </div>
+                            <figcaption class="img-btn-left">Nouveau</figcaption>
+                        </figure>
                         <header class="card-content">
                             <hgroup>
                                 <h2><a href="la_note_enchante.html" class="strong">La note enchantée</a></h2>
@@ -124,10 +124,10 @@
                     </article>
 
                     <article class="card card-img fade-7">
-                        <div class="card-img-header">
+                        <figure class="card-img-header">
                             <img alt="À la française" class="card-img-top"
                                  src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg">
-                        </div>
+                        </figure>
                         <header class="card-content">
                             <hgroup>
                                 <h2><a href="a_la_francaise.html" class="strong">À la française</a></h2>
@@ -141,10 +141,10 @@
                     </article>
 
                     <article class="card card-img fade-8">
-                        <div class="card-img-header">
+                        <figure class="card-img-header">
                             <img alt="Le délice des sens" class="card-img-top"
                                  src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg">
-                        </div>
+                        </figure>
                         <header class="card-content">
                             <hgroup>
                                 <h2><a href="le_delice_des_sens.html" class="strong">Le délice des sens</a></h2>
